[metadata]
name = rsdb
version = 0.0.1
author = woellauer
author_email = author@example.com
description = RSDB connection package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/environmentalinformatics-marburg/rsdb
project_urls =
    Bug Tracker = https://github.com/environmentalinformatics-marburg/rsdb/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3    

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src